preventing transaction scheduler to hang forever + fix vms event consumption + update develivery payload + price update script + checkout and update delivery script + remove modb-service + set max priority to scheduler and event handler + add vms thread pool size + aggregate send event in leader worker to avoid additional blocking queue